# applaunch

./: .gitignore  README.md  applaunch.spec  meson.build
src/: app_grid.vala  config.vala  dock.vala  favorites.vala  ipc.vala  launcher.vala  main.vala  meson.build  niri_ipc.vala  search_list.vala  utils.vala
src/search/: calculator_provider.vala  file_provider.vala  flatpak_provider.vala  shell_provider.vala  system_provider.vala  unicode_provider.vala
