project('applaunch', 'vala', 'c', default_options : ['optimization=2'])

glib = dependency('glib-2.0')
gobject = dependency('gobject-2.0')
gtk4 = dependency('gtk4')
libadwaita = dependency('libadwaita-1')
gtk4_layer_shell = dependency('gtk4-layer-shell-0')
gio_unix = dependency('gio-unix-2.0')
gio = dependency('gio-2.0')
appstream = dependency('appstream')
json_glib = dependency('json-glib-1.0')
gee = dependency('gee-0.8')

subdir('src')
